--- a/pom.xml
+++ b/pom.xml
@@ -195,6 +195,14 @@
 
         <!--^^^^ SI Cherif ^^^^-->
     </dependencies>
+    <!-- Deploy to Nexus -->
+    <distributionManagement>
+        <repository>
+            <id>deploymentRepo</id>
+            <name>Nexus Repository</name>
+            <url>http://192.168.1.30/:8081/repository/maven-releases/</url>
+        </repository>
+    </distributionManagement>
 
     <build>
         <plugins>
