--- a/pom.xml
+++ b/pom.xml
@@ -192,10 +192,17 @@
             <version>2.0.27</version>
         </dependency>
 
-
         <!--^^^^ SI Cherif ^^^^-->
     </dependencies>
 
+    <!-- Deploy to  Nexus -->
+    <distributionManagement>
+    <repository>
+    <id>deploymentRepo</id>
+    <name>Nexus Repository</name>
+    <url>http://localhost:8081/repository/maven-releases/</url>
+    </repository>
+</distributionManagement>
     <build>
         <plugins>
             <plugin>
