--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8088
-spring.datasource.url=jdbc:mysql://localhost:3306/CoCoMarket?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/cocomarket?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.show-sql=true
