--- a/pom.xml
+++ b/pom.xml
@@ -199,8 +199,7 @@
     <distributionManagement>
     <repository>
     <id>deploymentRepo</id>
-    <name>Nexus Repository</name>
-    <url>http://localhost:8081/repository/maven-releases/</url>
+    <name>Nexus Repository</name><url>http://192.168.1.34:8081/repository/maven-releases/</url>
     </repository>
 </distributionManagement>
     <build>
