--- a/jenkinsfile
+++ b/jenkinsfile
@@ -27,7 +27,7 @@ pipeline {
     stage('Docker login') {
         steps {
             sh 'echo "Docker login is processing ...."'
-            sh 'docker login --username ${khaledbouchrika829} --password ${213JMT7734}'
+            sh 'docker login --username ${username} --password ${pwd}'
 
         }
         }
@@ -44,10 +44,26 @@ pipeline {
     stage('Docker push') {
         steps {
             sh 'echo "Docker push is processing ...."'
-            sh 'docker push ${khaledbouchrika829}/gestionski'
+            sh 'docker push ${username}/gestionski'
 
         }
         }
+
+
+    stage("SonarQube ") {
+        steps {
+            withSonarQubeEnv('SonarQube') {
+            sh 'mvn clean -DskipTests package sonar:sonar'
+            }
+        }
+}
+
+
+    stage("NEXUS") {
+                steps {
+                            sh 'mvn clean deploy -DskipTests'
+            }
+            }
     
 
 /*
