--- a/jenkinsfile
+++ b/jenkinsfile
@@ -21,20 +21,20 @@ pipeline {
      stage('Docker login') {
       steps {
          sh 'echo "Docker login is processing ...."'
-        sh 'docker login --username khaledbouchrika829 --password 213JMT7734'
+        sh 'docker login --username $dockerhubusername --password $dockerhubpassword'
 
       }
     }
     stage('Docker build image') {
       steps {
          sh 'echo "Docker build image is processing ...."'
-        sh 'docker build -t khaled/gestionski .'
+        sh 'docker build -t khaledbouchrika829/gestionski .'
       }
     }
     stage('Docker push') {
       steps {
          sh 'echo "Docker push is processing ...."'
-        sh 'docker push ${khaled}/gestionski'
+        sh 'docker push khaledbouchrika829/gestionski'
 
       }
     }
