--- a/pom.xml
+++ b/pom.xml
@@ -200,7 +200,7 @@
         <repository>
             <id>deploymentRepo</id>
             <name>Nexus Repository</name>
-            <url>http://http://192.168.0.173:8081/repository/maven-releases/</url>
+            <url>http://192.168.0.173:8081/repository/maven-releases/</url>
         </repository>
     </distributionManagement>
 
