--- a/jenkinsfile
+++ b/jenkinsfile
@@ -16,7 +16,11 @@ pipeline {
             }
         }
 
-
+    stage("NEXUS") {
+			steps {
+						sh 'mvn clean deploy -DskipTests'
+          }
+        }
 
     stage("SonarQube ") {
             steps {
