--- a/pom.xml
+++ b/pom.xml
@@ -201,6 +201,12 @@
 
     <build>
         <plugins>
+            <!-- Add SonarQube plugin configuration -->
+            <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>3.9.0.2155</version>
+            </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
