--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,34 @@
 version: '3'
 services:
-  docker-mysql:
-    restart: always
-    container_name: docker-mysql
-    image: mysql
-    environment:
-      MYSQL_DATABASE: cocomarket
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_ROOT_HOST:
-    volumes:
-      - ./sql:/docker-entrypoint-initdb.d
-
-  spring-app:
+  coco:
+    image: oumaima55/imagebackendoumaima:latest
     restart: on-failure
-    build: ./
-    expose:
-      - "8080"
     ports:
-      - "8080:8080"
-    environment:
-      WAIT_HOSTS: mysql:3306
+      - '8088:8088'
     depends_on:
-      - docker-mysql
+      - mysql
+    networks:
+      - mynetwork
+    volumes:
+      - .m2:/root/.m2
+  mysql:
+    image: mysql:latest
+    restart: always
+    ports:
+      - 3306:3306
+    environment:
+      MYSQL_ROOT_PASSWORD: oumaima
+      MYSQL_DATABASE: cocomarket
+      MYSQL_USER: oumaima
+      MYSQL_PASSWORD: oumaima
+    networks:
+      - mynetwork
+    volumes:
+      - mysql-data:/var/lib/mysql
+
+networks:
+  mynetwork:
+volumes:
+  mysql-data:
+  .m2:
 
