--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8088
-spring.datasource.url=jdbc:mysql://localhost:3306/cocomarket?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://mysql:3306/cocomarket?createDatabaseIfNotExist=true
+spring.datasource.username=oumaima
+spring.datasource.password=oumaima
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
