--- a/pom.xml
+++ b/pom.xml
@@ -2,21 +2,24 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.7.8</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
+
     <groupId>com.example</groupId>
     <artifactId>CoCoMarket</artifactId>
     <version>0.0.1</version>
     <name>CoCoMarket</name>
     <description>CoCoMarket</description>
+
     <properties>
         <java.version>1.8</java.version>
-        
     </properties>
+          <!-- Vos dépendances ici ... -->  
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -198,8 +201,6 @@
             <artifactId>pdfbox</artifactId>
             <version>2.0.27</version>
         </dependency>
-
-
 
     </dependencies>
     <!-- Deploy to Nexus -->
