--- a/jenkinsfile
+++ b/jenkinsfile
@@ -22,11 +22,24 @@ pipeline {
           }
         }
 
+    /*
     stage("SonarQube ") {
             steps {
               withSonarQubeEnv('jenkins-sonar') {
                 sh 'mvn clean -DskipTests package sonar:sonar'
               }
+            }
+    }
+*/
+
+    stage("SonarQube ") {
+            steps {
+              script {
+                       withCredentials ([string(credentialsId: 'jenkins-sonar', variable: 'sonar')]){
+                           sh "mvn sonar:sonar -Dsonar.login=${sonar}"}
+                
+               
+                }
             }
     }
 
