--- a/jenkinsfile
+++ b/jenkinsfile
@@ -32,13 +32,11 @@ pipeline {
     }
 */
 
-    stage("SonarQube ") {
+    stage('SONARQUBE') {
             steps {
-              withSonarQubeEnv('jenkins-sonar') {
-                sh 'mvn sonar:sonar -Dsonar.login=${sonar}'
-              }
+                sh'mvn sonar:sonar -Dsonar.host.url=http://192.168.1.3:9000 -Dsonar.login=admin -Dsonar.password=admin'
             }
-    }
+        }
 
         
 
