update composer up

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -60,6 +60,12 @@ pipeline {
 
       }
     }
+    stage('Docker compose') {
+            steps {
+                    sh "docker compose up -d"
+
+            }
+        }
 
 /*
 
