update composer up

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -60,14 +60,19 @@ pipeline {
 
       }
     }
-    stage('Docker compose') {
+    stage('Run app With DockerCompose') {
+              steps {
+                  sh "docker-compose -f docker-compose.yml up -d  "
+              }
+            }
+   /* stage('Docker compose') {
             steps {
                     sh "docker compose up -d"
 
             }
         }
 
-/*
+
 
 
     stage ("Sonar Cube"){
