--- a/pom.xml
+++ b/pom.xml
@@ -216,6 +216,17 @@
 
     <build>
         <plugins>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+
+                <configuration>
+                    <includes>
+                        <include>**/*Test.java</include>
+                    </includes>
+                </configuration>
+            </plugin>
             <!-- Add SonarQube plugin configuration -->
             <plugin>
                 <groupId>org.sonarsource.scanner.maven</groupId>
