--- a/pom.xml
+++ b/pom.xml
@@ -206,13 +206,13 @@
         <!--^^^^ SI Cherif ^^^^-->
     </dependencies>
     <!-- Deploy to Nexus -->
-    <distributionManagement>
-        <repository>
-            <id>deploymentRepo</id>
-            <name>Nexus Repository</name>
-            <url>http://localhost:8081/repository/maven-releases/</url>
-        </repository>
-    </distributionManagement>
+<!--    <distributionManagement>-->
+<!--        <repository>-->
+<!--            <id>deploymentRepo</id>-->
+<!--            <name>Nexus Repository</name>-->
+<!--            <url>http://localhost:8081/repository/maven-releases/</url>-->
+<!--        </repository>-->
+<!--    </distributionManagement>-->
 
 
     <build>
