--- a/pom.xml
+++ b/pom.xml
@@ -227,6 +227,12 @@
                     </includes>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>3.2.0</version>
+            </plugin>
             <!-- Add SonarQube plugin configuration -->
             <plugin>
                 <groupId>org.sonarsource.scanner.maven</groupId>
