--- a/jenkinsfile
+++ b/jenkinsfile
@@ -12,9 +12,16 @@ pipeline {
 
     stage ("Mvn Package"){
         steps{
-                sh "mvn package"
+                sh "mvn clean package"
             }
         }
+
+        stage ("Mvn compile"){
+        steps{
+                sh "mvn compile"
+            }
+        }
+        
 
     stage("NEXUS") {
 			steps {
