--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,21 @@
-server.port=8082
+#Server configuration
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+server.servlet.context-path=/api
+server.port=8089
 ### DATABASE ###
-spring.datasource.url=jdbc:mysql://localhost:3306/devops?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/stationSki?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
 ### JPA / HIBERNATE ###
 spring.jpa.show-sql=true
+#spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+
+#logging configuration
+logging.level.com.zaxxer.hikari=INFO
+logging.level.org.springframework=INFO 
+logging.level.root=INFO
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %-5level - %logger{60} - %msg%n
+
